force-app/main/default/objects/Opportunity/fields/ActualTransferredDate__c.field-meta.xml
<CustomField>
    <fullName>ActualTransferredDate__c</fullName>
    <label>Actual Transferred Date</label>
    <type>Date</type>
</CustomField>