force-app/main/default/objects/Opportunity/fields/AppointmentofSignContract__c.field-meta.xml
<CustomField>
    <fullName>AppointmentofSignContract__c</fullName>
    <description>วันทำสัญญาจะซื้อจะขาย</description>
    <label>Appointment of Sign Contract</label>
    <type>Date</type>
</CustomField>