force-app/main/default/objects/Opportunity/fields/AskingPrice__c.field-meta.xml
<CustomField>
    <fullName>AskingPrice__c</fullName>
    <label>Asking Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>