force-app/main/default/objects/Opportunity/fields/CancelledDate__c.field-meta.xml
<CustomField>
    <fullName>CancelledDate__c</fullName>
    <description>วันที่ยกเลิก</description>
    <label>Cancelled Date</label>
    <type>Date</type>
</CustomField>