force-app/main/default/objects/Opportunity/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Store the name of the agent responsible for handling a customer or an opportunity.</description>
    <label>Channel</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Agent__c.ContractStatus__c</field>
            <operation>equals</operation>
            <value>New, Negotiating, Pending Signed, Contract Signed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>