force-app/main/default/objects/Opportunity/fields/ClosedLostDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedLostDate__c</fullName>
    <label>Closed Lost Date</label>
    <type>Date</type>
</CustomField>