force-app/main/default/objects/Opportunity/fields/CoBuyerName__c.field-meta.xml
<CustomField>
    <fullName>CoBuyerName__c</fullName>
    <label>Co-Buyer Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>