force-app/main/default/objects/Opportunity/fields/CommonExpense__c.field-meta.xml
<CustomField>
    <fullName>CommonExpense__c</fullName>
    <description>Common Expense - งวดที่เกี่ยวข้องกับค่าใช้จ่ายวันโอน</description>
    <label>Common Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>