force-app/main/default/objects/Opportunity/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>Conditions / เงื่อนไข</description>
    <label>Condition</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>