force-app/main/default/objects/Opportunity/fields/ContractAmount__c.field-meta.xml
<CustomField>
    <fullName>ContractAmount__c</fullName>
    <label>Contract Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>