force-app/main/default/objects/Opportunity/fields/ContractDate__c.field-meta.xml
<CustomField>
    <fullName>ContractDate__c</fullName>
    <formula>DATE(
    YEAR( ReservationDueDate__c ),
    MONTH(ReservationDueDate__c),
    DAY(ReservationDueDate__c) + 14
)</formula>
    <label>Contract Date</label>
    <type>Date</type>
</CustomField>