force-app/main/default/objects/Opportunity/fields/ContractFee__c.field-meta.xml
<CustomField>
    <fullName>ContractFee__c</fullName>
    <label>Contract Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>