force-app/main/default/objects/Opportunity/fields/DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmount__c</fullName>
    <defaultValue>(0)</defaultValue>
    <description>Stored the discount amount</description>
    <label>Discount Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>