force-app/main/default/objects/Opportunity/fields/DiscountAmountOfPercent__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmountOfPercent__c</fullName>
    <formula>UnitPrice__c *  DiscountPercent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount Of Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>