force-app/main/default/objects/Opportunity/fields/DiscountApprover__c.field-meta.xml
<CustomField>
    <fullName>DiscountApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ผู้อนุมัติส่วนลดพิเศษ (กรณีที่ขอส่วนลดเกิน)</description>
    <label>Discount Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Discounted Opportunities</relationshipLabel>
    <relationshipName>DiscountedOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>