force-app/main/default/objects/Opportunity/fields/DiscountPercentOfAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercentOfAmount__c</fullName>
    <description>Converts the discount amount into a percentage relative to the unit price. [Hide this field from Page Layout]</description>
    <formula>BLANKVALUE(DiscountAmount__c, 0) / UnitPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Percent Of Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>