force-app/main/default/objects/Opportunity/fields/DownPaymentPercentage__c.field-meta.xml
<CustomField>
    <fullName>DownPaymentPercentage__c</fullName>
    <label>Down Payment Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>