force-app/main/default/objects/Opportunity/fields/DownPaymentStartDate__c.field-meta.xml
<CustomField>
    <fullName>DownPaymentStartDate__c</fullName>
    <label>Down Payment Start Date</label>
    <type>Date</type>
</CustomField>