force-app/main/default/objects/Opportunity/fields/FurnitureExpenseAmount__c.field-meta.xml
<CustomField>
    <fullName>FurnitureExpenseAmount__c</fullName>
    <description>ค่า furniture เพิ่มเติม</description>
    <label>Furniture Expense Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>