force-app/main/default/objects/Opportunity/fields/FurtherTermsandConditions__c.field-meta.xml
<CustomField>
    <fullName>FurtherTermsandConditions__c</fullName>
    <description>ระยะเวลาและเงื่อนไขเพิ่มเติม</description>
    <label>Further Terms and Conditions</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>