force-app/main/default/objects/Opportunity/fields/InitialContractAmount__c.field-meta.xml
<CustomField>
    <fullName>InitialContractAmount__c</fullName>
    <formula>IF(
    ContractPercent__c &lt;&gt; 0, 
    UnitPrice__c * ContractPercent__c, 
    ContractAmount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>