force-app/main/default/objects/Opportunity/fields/InitialReservationAmount__c.field-meta.xml
<CustomField>
    <fullName>InitialReservationAmount__c</fullName>
    <formula>Unit__r.ReservationPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Reservation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>