force-app/main/default/objects/Opportunity/fields/InitialTotalInstallmentAmount__c.field-meta.xml
<CustomField>
    <fullName>InitialTotalInstallmentAmount__c</fullName>
    <formula>IF(
    TotalInstallmentPercent__c &lt;&gt; 0, 
    UnitPrice__c * TotalInstallmentPercent__c , 
    TotalInstallmentAmount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Total Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>