force-app/main/default/objects/Opportunity/fields/InitialTransferAmount__c.field-meta.xml
<CustomField>
    <fullName>InitialTransferAmount__c</fullName>
    <formula>NetPrice__c - InitialContractAmount__c - InitialReservationAmount__c - InitialTotalInstallmentAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Transfer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>