force-app/main/default/objects/Opportunity/fields/InstallationPeriod__c.field-meta.xml
<CustomField>
    <fullName>InstallationPeriod__c</fullName>
    <description>ระยะเวลาการผ่อนชำระ</description>
    <label>Installation Period</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>