force-app/main/default/objects/Opportunity/fields/InstallationTerm__c.field-meta.xml
<CustomField>
    <fullName>InstallationTerm__c</fullName>
    <description>Installations 1-20 งวดที่ 1-20</description>
    <label>Installation Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>