force-app/main/default/objects/Opportunity/fields/InstallmentPerMonth__c.field-meta.xml
<CustomField>
    <fullName>InstallmentPerMonth__c</fullName>
    <label>Installment per month</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>