force-app/main/default/objects/Opportunity/fields/IsCoBuyer__c.field-meta.xml
<CustomField>
    <fullName>IsCoBuyer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>flag Co-Buyer</description>
    <label>IsCo-Buyer</label>
    <type>Checkbox</type>
</CustomField>