force-app/main/default/objects/Opportunity/fields/IsCompletedContract__c.field-meta.xml
<CustomField>
    <fullName>IsCompletedContract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCompletedContract</label>
    <type>Checkbox</type>
</CustomField>