force-app/main/default/objects/Opportunity/fields/IsPaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>IsPaymentTerm__c</fullName>
    <formula>IF(  ISBLANK (PaymentTermMaster__c) , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Payment Term</label>
    <type>Checkbox</type>
</CustomField>