force-app/main/default/objects/Opportunity/fields/IsQuoteSynced__c.field-meta.xml
<CustomField>
    <fullName>IsQuoteSynced__c</fullName>
    <formula>SyncedQuoteId__r.IsSyncing__c</formula>
    <label>Is Quote Synced</label>
    <type>Checkbox</type>
</CustomField>