force-app/main/default/objects/Opportunity/fields/LockedPeriod__c.field-meta.xml
<CustomField>
    <fullName>LockedPeriod__c</fullName>
    <description>ระยะเวลาที่จะให้ lock ห้อง</description>
    <label>Locked Period(Day)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>