force-app/main/default/objects/Opportunity/fields/LockUnit__c.field-meta.xml
<CustomField>
    <fullName>LockUnit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>สถานะการ lock ห้องที่ผูกกับ โอกาสการขายนี้</description>
    <label>Lock Unit</label>
    <type>Checkbox</type>
</CustomField>