force-app/main/default/objects/Opportunity/fields/LossReason__c.field-meta.xml
<CustomField>
    <fullName>LossReason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Interest</fullName>
            </value>
            <value>
                <fullName>Budget Constraints</fullName>
            </value>
            <value>
                <fullName>Chose competitor</fullName>
            </value>
            <value>
                <fullName>Unreachable</fullName>
            </value>
            <value>
                <fullName>Extended Decision-Making Time</fullName>
            </value>
            <value>
                <fullName>Changed Requirements</fullName>
            </value>
            <value>
                <fullName>Outdated Opportunities</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>