force-app/main/default/objects/Opportunity/fields/MaintenanceFee__c.field-meta.xml
<CustomField>
    <fullName>MaintenanceFee__c</fullName>
    <description>Maintenance Fee 
Ex. (75 THB/SQ.M/Month) ค่าส่วนกลาง (75 บาท/ตร.ม./เดือน)</description>
    <label>Maintenance Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>