force-app/main/default/objects/Opportunity/fields/MiscellaneousFee__c.field-meta.xml
<CustomField>
    <fullName>MiscellaneousFee__c</fullName>
    <description>Miscellaneous Fee - งวดที่เกี่ยวข้องกับค่าใช้จ่ายวันโอน</description>
    <label>Miscellaneous Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>