force-app/main/default/objects/Opportunity/fields/MonthlySinkingFund__c.field-meta.xml
<CustomField>
    <fullName>MonthlySinkingFund__c</fullName>
    <description>Monthly Sinking Fund 
Ex. (5 THB/SQ.M/Month) ค่ากองทุนส่วนกลางรายเดือน (5 บาท/ตร.ม./เดือน)</description>
    <label>Monthly Sinking Fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>