force-app/main/default/objects/Opportunity/fields/MortgageFee__c.field-meta.xml
<CustomField>
    <fullName>MortgageFee__c</fullName>
    <description>Mortgage Fee - งวดที่เกี่ยวข้องกับค่าใช้จ่ายวันโอน</description>
    <label>Mortgage Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>