force-app/main/default/objects/Opportunity/fields/NetPrice__c.field-meta.xml
<CustomField>
    <fullName>NetPrice__c</fullName>
    <formula>(  BLANKVALUE(UnitPrice__c, 0.00)  -( BLANKVALUE(UnitPrice__c, 0.00) *BLANKVALUE(TotalDiscountPercent__c, 0.00) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>