force-app/main/default/objects/Opportunity/fields/NetPricePerSqm__c.field-meta.xml
<CustomField>
    <fullName>NetPricePerSqm__c</fullName>
    <formula>IF( AreaSqm__c &gt; 0,  NetPrice__c / AreaSqm__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Price/Sq.m</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>