force-app/main/default/objects/Opportunity/fields/OppNameFormat__c.field-meta.xml
<CustomField>
    <fullName>OppNameFormat__c</fullName>
    <formula>IF(
    ISBLANK(Project__c),
    LEFT(Account.Name, 120),
    IF(
        ISBLANK(Unit__r.Name),
        LEFT(Project__r.ProjectAbbreviated__c &amp; &quot; - &quot; &amp; Account.Name, 120),
        LEFT(Project__r.ProjectAbbreviated__c &amp; &quot; - &quot; &amp; Unit__r.Name &amp; &quot; - &quot; &amp; Account.Name, 120)
    )
)</formula>
    <label>OppNameFormat</label>
    <type>Text</type>
</CustomField>