force-app/main/default/objects/Opportunity/fields/OtherLostRejectReason__c.field-meta.xml
<CustomField>
    <fullName>OtherLostRejectReason__c</fullName>
    <label>Other Lost/Reject Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>