force-app/main/default/objects/Opportunity/fields/PartitionPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>PartitionPaymentAmount__c</fullName>
    <description>ค่าต่อเติมห้อง</description>
    <label>Partition Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>