force-app/main/default/objects/Opportunity/fields/PaymentReceipt__c.field-meta.xml
<CustomField>
    <fullName>PaymentReceipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Receipt</label>
    <referenceTo>PaymentReceipt__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>