force-app/main/default/objects/Opportunity/fields/PaymentSummaryDocId__c.field-meta.xml
<CustomField>
    <fullName>PaymentSummaryDocId__c</fullName>
    <description>ไว้ใช้เก็บ Content Document Id ของเอกสาร Payment Summary เพื่อใช้ในการ Save เอกสารทับไฟล์เดิมเวลากด Generate Payment Summary</description>
    <label>Payment Summary Doc Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>