force-app/main/default/objects/Opportunity/fields/PaymentTermMaster__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Term Master</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Project__c</field>
            <operation>equals</operation>
            <valueField>PaymentTermMaster__c.Project__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Quota__c</field>
            <operation>equals</operation>
            <valueField>PaymentTermMaster__c.Quota__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PaymentTermMaster__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>