force-app/main/default/objects/Opportunity/fields/PayOverwaitingrefund__c.field-meta.xml
<CustomField>
    <fullName>PayOverwaitingrefund__c</fullName>
    <description>Pay Over waiting refund - งวดพิเศษ มีเฉพาะบางโครงการ/ห้อง</description>
    <label>Pay Over waiting refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>