force-app/main/default/objects/Opportunity/fields/PreviousOwner__c.field-meta.xml
<CustomField>
    <fullName>PreviousOwner__c</fullName>
    <label>Previous Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>