force-app/main/default/objects/Opportunity/fields/Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ผูกกับ pricebook</description>
    <label>Pricebook</label>
    <referenceTo>PricebookNotUsed__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>