force-app/main/default/objects/Opportunity/fields/Pricesqm__c.field-meta.xml
<CustomField>
    <fullName>Pricesqm__c</fullName>
    <description>ราคาต่อตารางเมตร</description>
    <label>Price / Sq.m.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>