force-app/main/default/objects/Opportunity/fields/PrivateParkingFee__c.field-meta.xml
<CustomField>
    <fullName>PrivateParkingFee__c</fullName>
    <description>Private Parking Fee ค่ากรรมสิทธิ์ที่จอดรถ</description>
    <label>Private Parking Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>