force-app/main/default/objects/Opportunity/fields/PromotionInformation__c.field-meta.xml
<CustomField>
    <fullName>PromotionInformation__c</fullName>
    <description>เก็บข้อมูล Promotion</description>
    <label>Promotion Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>