force-app/main/default/objects/Opportunity/fields/PurposeofPurchase__c.field-meta.xml
<CustomField>
    <fullName>PurposeofPurchase__c</fullName>
    <label>Purpose of Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PurposeofPurchase</valueSetName>
    </valueSet>
</CustomField>