force-app/main/default/objects/Opportunity/fields/PurposeofReservation__c.field-meta.xml
<CustomField>
    <fullName>PurposeofReservation__c</fullName>
    <description>วัตถุประสงค์ในการจองซื้อโครงการ</description>
    <label>Purpose of Reservation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Living</fullName>
            </value>
            <value>
                <fullName>Long-term Investment</fullName>
            </value>
            <value>
                <fullName>Short-Term Investment</fullName>
            </value>
            <value>
                <fullName>Resales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>