force-app/main/default/objects/Opportunity/fields/Quota__c.field-meta.xml
<CustomField>
    <fullName>Quota__c</fullName>
    <label>Quota</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Foreign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>