force-app/main/default/objects/Opportunity/fields/Ratio__c.field-meta.xml
<CustomField>
    <fullName>Ratio__c</fullName>
    <label>Ratio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>50:50</fullName>
            </value>
            <value>
                <fullName>60:40</fullName>
            </value>
            <value>
                <fullName>70:30</fullName>
            </value>
            <value>
                <fullName>80:20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>