force-app/main/default/objects/Opportunity/fields/RecordOpportunity__c.field-meta.xml
<CustomField>
    <fullName>RecordOpportunity__c</fullName>
    <description>Used for calculation in the report.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>