force-app/main/default/objects/Opportunity/fields/RecordSoldOpportunity__c.field-meta.xml
<CustomField>
    <fullName>RecordSoldOpportunity__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL( StageName , &quot;Reservation&quot;),
        ISPICKVAL(StageName , &quot;Contract&quot;),
        ISPICKVAL(StageName , &quot;Transferred&quot;),
        ISPICKVAL(StageName , &quot;Closed Won&quot;)
    ),
    1,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Sold Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>