force-app/main/default/objects/Opportunity/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <description>Remark / หมายเหตุ</description>
    <label>Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>