force-app/main/default/objects/Opportunity/fields/ReservationDocId__c.field-meta.xml
<CustomField>
    <fullName>ReservationDocId__c</fullName>
    <description>ไว้ใช้เก็บ Content Document Id ของเอกสาร Reservation เพื่อใช้ในการ Save เอกสารทับไฟล์เดิมเวลากด Generate Reservation</description>
    <label>Reservation Doc Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>