force-app/main/default/objects/Opportunity/fields/ReservationDueDate__c.field-meta.xml
<CustomField>
    <fullName>ReservationDueDate__c</fullName>
    <label>Reservation Due Date</label>
    <type>Date</type>
</CustomField>