force-app/main/default/objects/Opportunity/fields/ReservationPrice__c.field-meta.xml
<CustomField>
    <fullName>ReservationPrice__c</fullName>
    <formula>Unit__r.ReservationPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reservation Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>