force-app/main/default/objects/Opportunity/fields/ReserveFundforwatersupply__c.field-meta.xml
<CustomField>
    <fullName>ReserveFundforwatersupply__c</fullName>
    <description>Reserve Fund for water supply - งวดที่เกี่ยวข้องกับค่าใช้จ่ายวันโอน</description>
    <label>Reserve Fund for water supply</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>