force-app/main/default/objects/Opportunity/fields/SoldBy2__c.field-meta.xml
<CustomField>
    <fullName>SoldBy2__c</fullName>
    <label>Sold By 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SoldBy</valueSetName>
    </valueSet>
</CustomField>