force-app/main/default/objects/Opportunity/fields/SoldBy__c.field-meta.xml
<CustomField>
    <fullName>SoldBy__c</fullName>
    <label>Sold by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SoldBy</valueSetName>
    </valueSet>
</CustomField>