force-app/main/default/objects/Opportunity/fields/SpecificBusinessTax__c.field-meta.xml
<CustomField>
    <fullName>SpecificBusinessTax__c</fullName>
    <description>Specific Business Tax - งวดที่เกี่ยวข้องกับค่าใช้จ่ายวันโอน</description>
    <label>Specific Business Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>