force-app/main/default/objects/Opportunity/fields/SummaryIntallment__c.field-meta.xml
<CustomField>
    <fullName>SummaryIntallment__c</fullName>
    <label>Summary Intallment</label>
    <summarizedField>OpportunityPayment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityPayment__c.Term__c</field>
        <operation>contains</operation>
        <value>Installment</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityPayment__c.IsMasterData__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityPayment__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>