force-app/main/default/objects/Opportunity/fields/SyncedQuoteId__c.field-meta.xml
<CustomField>
    <fullName>SyncedQuoteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SyncedQuoteId</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>