force-app/main/default/objects/Opportunity/fields/TotalCustomerVisit__c.field-meta.xml
<CustomField>
    <fullName>TotalCustomerVisit__c</fullName>
    <label>Total Customer Visit</label>
    <summarizedField>CustomerVisit__c.RecordVisit__c</summarizedField>
    <summaryForeignKey>CustomerVisit__c.OpportunityName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>