force-app/main/default/objects/Opportunity/fields/TotalDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscountAmount__c</fullName>
    <formula>UnitPrice__c -  NetPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>